[package]
name = "drum_machine"
version = "0.1.0"
authors = ["ekloeckner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.10.0"
hound = "3.4.0"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.gdk]
version = "^0"

[dependencies.glib]
version = "^0"
